fixed "widget disposed" exception in alarm viewer